--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1 class="project-name">CBTis 52: Programacion 3AV - Curso de C++</h1>
       <h2 class="project-tagline">Ejercicios realizados en clase de Programacion Orientada a Objetos durante el tercer semestre.</h2>
       <a href="https://github.com/fernando-guzman/C-plus-plus" class="btn">View on GitHub</a>
-      <a href="https://github.com/fernando-guzman/C-plus-plus/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/fernando-guzman/C-plus-plus/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/fernando-guzman/C-plus-plus/zipball/master" class="btn">Descargar .zip</a>
+      <a href="https://github.com/fernando-guzman/C-plus-plus/tarball/master" class="btn">Descargar .tar.gz</a>
     </section>
 
     <section class="main-content">
