--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <a id="c---ejemplos-y-ejercicios" class="anchor" href="#c---ejemplos-y-ejercicios" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>C++ - Ejemplos y ejercicios</h3>
 
 <ul>
-<li><a href="https://github.com/fernando-guzman/C-plus-plus/tree/master/Primer-parcial">Primer parcial</a></li>
-<li><a href="https://github.com/fernando-guzman/C-plus-plus/tree/master/Segundo-parcial">Segundo parcial</a></li>
+<li><a href="https://github.com/fernando-guzman/C-plus-plus/tree/master/Primer parcial">Primer parcial</a></li>
+<li><a href="https://github.com/fernando-guzman/C-plus-plus/tree/master/Segundo parcial">Segundo parcial</a></li>
 <li>Tercer parcial - <strong>proyecto</strong>
 </li>
 </ul>
